--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -25,5 +25,5 @@
 .navbar-links_left a,
 .navbar-links_right a {
   text-transform: uppercase;
-  color: green;
+  color: white;
 }
